--- a/client/src/app/hero/hero.component.html
+++ b/client/src/app/hero/hero.component.html
@@ -13,7 +13,9 @@
     <div class="row align-items-center">
       <!-- Left Side: Profile Image Component -->
       <div class="col-md-6 text-center">
+        <button class="waves-button" (click)="playVideoOnInteraction()">Waves!</button>
         <app-profile-image></app-profile-image>
+
       </div>
 
       <!-- Right Side: Hero Text -->
