--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,21 +1,9 @@
+
+
 <div class="container-fluid">
   <!-- Navbar -->
   <app-nav-bar></app-nav-bar>
-  <app-hero></app-hero>
-  <div class="row">
-    <div class="col-md-4">
-      <app-journey></app-journey>
-    </div>
-    <div class="col-md-4">
-      <app-monster-match></app-monster-match>
-    </div>
-    <div class="col-md-4">
-      <app-final-battle></app-final-battle>
-    </div>
-    
-  </div>
 
-    
-  
+  <!-- Routed content will be displayed here -->
+  <router-outlet></router-outlet>
 </div>
-<app-experience></app-experience>
