--- a/client/src/app/experience/experience.component.css
+++ b/client/src/app/experience/experience.component.css
@@ -8,6 +8,12 @@
     padding-top: 70px;
     padding-bottom: 40px;
 }
-.col-md-4{
-    
+.col-12{
+    border-top: 2px solid #232428;
+}
+
+.border-line {
+  display: block;
+  border-bottom: 2px solid #232428; /* Adjust thickness and color */
+
 }
