--- a/client/src/app/experience/experience.component.html
+++ b/client/src/app/experience/experience.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+
     <!-- Title Section -->
     <div class="row">
       <div class="col-12 text-center">
@@ -74,5 +74,6 @@
         </div>
       </div>
     </div>
-  </div>
+    <br><br><br class="border-line">
+
   
