--- a/client/src/app/nav-bar.component.html
+++ b/client/src/app/nav-bar.component.html
@@ -1,4 +1,9 @@
+ <!-- Background Blur Element -->
+ <div class="navbar-blur"></div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+
+ 
+
     <a class="navbar-brand ml-3" href="#">Arin Leviti</a> <!-- Add margin-left -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,7 +14,7 @@
           <a class="nav-link" href="#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#blog">Blog</a>
+          <a class="nav-link" routerLink="/blog">Blog</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#projects">Projects</a>
@@ -20,4 +25,5 @@
       </ul>
     </div>
   </nav>
+
   
