--- a/client/src/app/hero/hero.component.css
+++ b/client/src/app/hero/hero.component.css
@@ -35,7 +35,7 @@
     width: 100%;
     height: 60%;
     z-index: -1; /* Ensures it's behind the content */
-    border-bottom: 5px solid black;
+    border-bottom: 5px solid #232428;
     /* overflow: hidden; */ /* Hide video overflow */
   }
   
