--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <!-- Navbar -->
     <app-nav-bar></app-nav-bar>
     <app-hero></app-hero>
-    <div class="row">
+    <div class="row" id="projects">
       <div class="col-md-4">
         <app-journey></app-journey>
       </div>
@@ -17,3 +17,4 @@
   
   <app-experience></app-experience>
   <app-blog-carousel></app-blog-carousel>
+  <app-education></app-education>
