styling and privacy
added waves for the footer, privacy policy, background for the blog, sandwitch menu

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,9 +2,10 @@
 
 <div class="container-fluid">
   <!-- Navbar -->
-  <app-nav-bar></app-nav-bar>
+  <app-nav-bar class="navbar"></app-nav-bar>
 
   <!-- Routed content will be displayed here -->
   <router-outlet></router-outlet>
+  
 </div>
 <app-footer></app-footer>
