--- a/client/src/app/hero/hero.component.html
+++ b/client/src/app/hero/hero.component.html
@@ -29,7 +29,7 @@
           I am well-versed in collaborative development environments, leveraging version control to contribute
           effectively to team projects.
         </p>
-        <a href="#contact" class="btn btn-primary">Get in Touch</a>
+        <a href="mailto:arin.leviti@gmail.com" class="btn btn-primary">Get in Touch</a>
       </div>
     </div>
   </div>
