--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -1,14 +1,24 @@
 <!-- footer.component.html -->
 <footer class="site-footer">
+  <!-- Background Video -->
+  <div class="video-container">
+    <video #backgroundVideo autoplay loop muted playsinline preload="auto">
+      <source src="https://res.cloudinary.com/dvr9t29vj/video/upload/v1742823869/266049_tiny_bkjizq.webm"
+        type="video/webm">
+      Your browser does not support the video tag.
+    </video>
+  </div>
     <div class="container">
       <div class="footer-content">
         <a (click)="openPrivacyModal()">Privacy Policy</a>
-        <span class="divider">|</span>
-        <a href="/terms">Update cookies preferences</a>
+     
         <span class="divider">|</span>
         <span class="footer-content">&copy; {{ currentYear }} Arin Leviti. All rights reserved.</span>
+        <span class="divider">|</span>
+        <span><app-cookie-consent></app-cookie-consent></span>
       </div>
     </div>
+    
   </footer>
 
   
