--- a/client/src/app/hero/hero.component.html
+++ b/client/src/app/hero/hero.component.html
@@ -1,35 +1,35 @@
+<!-- Hero Container: Holds everything -->
+<div class="hero-container">
+  <!-- Background Video -->
+  <div class="video-container">
+    <div  #backgroundVideoElement></div>
+  </div>
+    
+  
 
-  <!-- Hero Container: Holds everything -->
-  <div class="hero-container">
-    <!-- Background Video -->
-    <div class="video-container">
-      <video #backgroundVideo autoplay loop muted playsinline preload="auto">
-        <source src="https://res.cloudinary.com/dvr9t29vj/video/upload/v1742823869/266049_tiny_bkjizq.webm"
-          type="video/webm">
-        Your browser does not support the video tag.
-      </video>
+  <div class="row align-items-center">
+    <!-- Left Side: Profile Image Component -->
+    <div class="col-md-6 text-center">
+      <button class="waves-button" (click)="playVideo() ">Waves!</button>
+      <app-profile-image></app-profile-image>
     </div>
 
-    <div class="row align-items-center">
-      <!-- Left Side: Profile Image Component -->
-      <div class="col-md-6 text-center">
-        <button class="waves-button" (click)="playVideoOnInteraction()">Waves!</button>
-        <app-profile-image></app-profile-image>
-
-      </div>
-
-      <!-- Right Side: Hero Text -->
-      <div class="col-md-6">
-        <h1 class="display-4">.NET - Angular | Unity Programmer</h1>
-        <p class="lead">
-          With nearly two years of dedicated experience in C# and Unity development, I have cultivated a strong
-          foundation in game development through mentorship and practical application. My expertise includes designing
-          robust class architectures, implementing MVC patterns, ensuring separation of concerns, and integrating unit
-          testing into development workflows. Additionally,
-          I am well-versed in collaborative development environments, leveraging version control to contribute
-          effectively to team projects.
-        </p>
-        <a href="mailto:arin.leviti@gmail.com" class="btn btn-primary">Get in Touch</a>
-      </div>
+    <!-- Right Side: Hero Text -->
+    <div class="col-md-6">
+      <h1 class="display-4">.NET - Angular | Unity Programmer</h1>
+      <p class="lead">
+        With nearly two years of dedicated experience in C# and Unity
+        development, I have cultivated a strong foundation in game development
+        through mentorship and practical application. My expertise includes
+        designing robust class architectures, implementing MVC patterns,
+        ensuring separation of concerns, and integrating unit testing into
+        development workflows. Additionally, I am well-versed in collaborative
+        development environments, leveraging version control to contribute
+        effectively to team projects.
+      </p>
+      <a href="mailto:arin.leviti@gmail.com" class="btn btn-primary"
+        >Get in Touch</a
+      >
     </div>
   </div>
+</div>
