--- a/client/src/app/nav-bar.component.html
+++ b/client/src/app/nav-bar.component.html
@@ -26,8 +26,9 @@
           <a class="nav-link" href="https://drive.google.com/file/d/1jBSfRb5HviWMverflp7Wf1RXk9Rnu1xv/view?usp=drive_link">My CV</a>
         </li>
         <li class=" github-icon">
-         <a class="nav-link" href="https://github.com/arinleviti"><i class="fa-brands fa-github nav-link" ></i></a>
-            
+         <a class="nav-link" href="https://github.com/arinleviti" target="_blank"><i class="fa-brands fa-github nav-link" ></i></a>
+         <li class=" linkedin-icon">
+          <a class="nav-link" href="https://www.linkedin.com/in/arin-leviti-b169bb18/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>  
           
           
         </li>
