deployed on azure
Deployment successful, everything works. I still need to update the content and work on a few mobile bugs

--- a/client/src/app/education/education.component.html
+++ b/client/src/app/education/education.component.html
@@ -6,14 +6,14 @@
       </div>
     
       <!-- Experience Section -->
-      <div class="row">
+      <div class="row edu-container">
         <!-- Experience Card 1 -->
         <div class="col-md-4">
           <div class="experience-card text-center">
             <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Job Title 1</h4>
+            <h4 class="experience-title">Unity Junior Programmer</h4>
             <p class="experience-description">
-              Brief description of your role at this job. Technologies used, responsibilities, etc.
+              The Unity Junior Programmer Pathway validates skills and competencies to be a proficient junior programmer writing scripts in C# to create interactive experiences with the Unity Editor.
             </p>
           </div>
         </div>
@@ -22,9 +22,9 @@
         <div class="col-md-4">
           <div class="experience-card text-center">
             <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Job Title 2</h4>
+            <h4 class="experience-title">Udemy - Build an app with ASPNET Core and Angular from scratch</h4>
             <p class="experience-description">
-              Description of this job. Include accomplishments, team size, etc.
+              Complete project based course from start to finish with real world experience using technologies that are currently in demand in the market.
             </p>
           </div>
         </div>
@@ -33,9 +33,9 @@
         <div class="col-md-4">
           <div class="experience-card text-center">
             <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Job Title 3</h4>
+            <h4 class="experience-title"> MA Screenwriting and Producing for Film and TV</h4>
             <p class="experience-description">
-              Brief description of your role at this job. Technologies used, responsibilities, etc.
+              University of Westminster, London
             </p>
           </div>
         </div>
@@ -43,34 +43,15 @@
     
       <!-- Add more rows as needed -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 mx-auto">
           <div class="experience-card text-center">
             <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Job Title 4</h4>
+            <h4 class="experience-title">Scientific High School diploma specializing in Computer Science</h4>
             <p class="experience-description">
-              Description of this job.
+              Istituto Rosa Bianca, Cavalese, Italy
             </p>
           </div>
         </div>
     
-        <div class="col-md-4">
-          <div class="experience-card text-center">
-            <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Job Title 5</h4>
-            <p class="experience-description">
-              Description of this job.
-            </p>
-          </div>
-        </div>
-    
-        <div class="col-md-4">
-          <div class="experience-card text-center">
-            <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Job Title 6</h4>
-            <p class="experience-description">
-              Description of this job.
-            </p>
-          </div>
-        </div>
-      </div>
+        
       <br><br><br class="border-line">
