--- a/client/src/app/education/education.component.css
+++ b/client/src/app/education/education.component.css
@@ -17,3 +17,7 @@
   border-bottom: 2px solid #232428; /* Adjust thickness and color */
 
 }
+.edu-container{
+  padding-left: 15px;
+  padding-right: 15px;
+}
