--- a/client/src/app/experience/experience.component.html
+++ b/client/src/app/experience/experience.component.html
@@ -1,79 +1,86 @@
+<!-- Title Section -->
+<div class="row">
+  <div class="col-12 text-center">
+    <h2 class="section-title">Selected Experience</h2>
+  </div>
+</div>
 
-    <!-- Title Section -->
-    <div class="row">
-      <div class="col-12 text-center">
-        <h2 class="section-title">Selected Experience</h2>
-      </div>
-    </div>
-  
-    <!-- Experience Section -->
-    <div class="row">
-      <!-- Experience Card 1 -->
-      <div class="col-md-4">
-        <div class="experience-card text-center">
-          <i class="fa fa-briefcase"></i>
-          <h4 class="experience-title">Job Title 1</h4>
-          <p class="experience-description">
-            Brief description of your role at this job. Technologies used, responsibilities, etc.
-          </p>
-        </div>
-      </div>
-  
-      <!-- Experience Card 2 -->
-      <div class="col-md-4">
-        <div class="experience-card text-center">
-          <i class="fa fa-briefcase"></i>
-          <h4 class="experience-title">Job Title 2</h4>
-          <p class="experience-description">
-            Description of this job. Include accomplishments, team size, etc.
-          </p>
-        </div>
-      </div>
-  
-      <!-- Experience Card 3 -->
-      <div class="col-md-4">
-        <div class="experience-card text-center">
-          <i class="fa fa-briefcase"></i>
-          <h4 class="experience-title">Job Title 3</h4>
-          <p class="experience-description">
-            Brief description of your role at this job. Technologies used, responsibilities, etc.
-          </p>
-        </div>
-      </div>
-    </div>
-  
-    <!-- Add more rows as needed -->
-    <div class="row">
-      <div class="col-md-4">
-        <div class="experience-card text-center">
-          <i class="fa fa-briefcase"></i>
-          <h4 class="experience-title">Job Title 4</h4>
-          <p class="experience-description">
-            Description of this job.
-          </p>
-        </div>
-      </div>
-  
-      <div class="col-md-4">
-        <div class="experience-card text-center">
-          <i class="fa fa-briefcase"></i>
-          <h4 class="experience-title">Job Title 5</h4>
-          <p class="experience-description">
-            Description of this job.
-          </p>
-        </div>
-      </div>
-  
-      <div class="col-md-4">
-        <div class="experience-card text-center">
-          <i class="fa fa-briefcase"></i>
-          <h4 class="experience-title">Job Title 6</h4>
-          <p class="experience-description">
-            Description of this job.
-          </p>
-        </div>
-      </div>
-    </div>
-    <br><br><br class="border-line">
+<!-- Experience Section -->
+<div class="row exp-container">
 
-  
+  <!-- Experience Card 1 -->
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-briefcase"></i>
+      <h4 class="experience-title">Front-end developer - Octosharko Games</h4>
+      <p class="experience-description">
+        Creating a responsive frontend with Angular for a resource management game, with efficient player progression,
+        and a smooth user experience.
+      </p>
+    </div>
+  </div>
+
+  <!-- Experience Card 2 -->
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-briefcase"></i>
+      <h4 class="experience-title">Production Linguist - Apple</h4>
+      <p class="experience-description">
+        Produced and edited hundreds of scripts and material for AI training.
+      </p>
+    </div>
+  </div>
+
+  <!-- Experience Card 2 -->
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-briefcase"></i>
+      <h4 class="experience-title">Script Writer - NATO</h4>
+      <p class="experience-description">
+        As part of the COTECO media team, I wrote 19 scripts in 19 days for social media reels, documenting portions of
+        Exercise Steadfast Defender 2024 in Poland and Latvia. The reels helped NATO JFCBS increase their followers by
+        30 %.
+      </p>
+    </div>
+  </div>
+
+  <!-- Experience Card 3 -->
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-briefcase"></i>
+      <h4 class="experience-title">Autodidact Unity Developer</h4>
+      <p class="experience-description">
+        Nearly three years of in-depth study of C#, achieving an advanced level of proficiency.
+        Created two playable prototypes and developed a real-time soccer match replay system in Unity using JSON data
+        for synchronized player and ball movements.
+
+      </p>
+    </div>
+  </div>
+
+
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-briefcase"></i>
+      <h4 class="experience-title">Assistant Director/Development Assistant</h4>
+      <p class="experience-description">
+        Contributed to planning and coordinating a complex commercial shoot for Arte, France.
+        3rd Assistant Director/Interpreter on The Drops of God (HULU/France TV).
+      </p>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-briefcase"></i>
+      <h4 class="experience-title">Linkedin Paris - Office Facilities Coordinator / Translator and Interpreter</h4>
+      <p class="experience-description">
+        Assisted in all aspects of client and tenant satisfaction, managed all hard and soft services, and developed a
+        close working relationship with key stakeholders.
+      </p>
+    </div>
+  </div>
+
+ 
+</div>
+<br><br><br class="border-line">
