--- a/client/src/app/education/education.component.css
+++ b/client/src/app/education/education.component.css
@@ -20,4 +20,9 @@
 .edu-container{
   padding-left: 15px;
   padding-right: 15px;
+
+}
+.experience-description{
+  font-size: 18px;
+    font-weight: 300; /* Matches Bootstrap's .lead */
 }
