--- a/client/src/app/experience/experience.component.css
+++ b/client/src/app/experience/experience.component.css
@@ -22,3 +22,7 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+.experience-description{
+  font-size: 18px;
+    font-weight: 300; /* Matches Bootstrap's .lead */
+}
