--- a/client/src/app/footer/footer.component.html
+++ b/client/src/app/footer/footer.component.html
@@ -13,9 +13,11 @@
         <a (click)="openPrivacyModal()">Privacy Policy</a>
      
         <span class="divider">|</span>
-        <span class="footer-content">&copy; {{ currentYear }} Arin Leviti. All rights reserved.</span>
+        <span class="footer-content">&copy; {{ currentYear }} Arin Leviti. All rights reserved</span>
         <span class="divider">|</span>
         <span><app-cookie-consent></app-cookie-consent></span>
+        <span class="divider">|</span>
+        <span class="footer-content">Custom-built by me using .NET and Angular</span>
       </div>
     </div>
     
