--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -17,7 +17,7 @@
     <app-final-battle></app-final-battle>
   </div>
 </div>
-
+<app-expertise></app-expertise>
 <app-experience></app-experience>
 <app-blog-carousel></app-blog-carousel>
 <app-education></app-education>
