--- a/client/src/app/education/education.component.html
+++ b/client/src/app/education/education.component.html
@@ -1,57 +1,59 @@
-    <!-- Title Section -->
-    <div class="row">
-        <div class="col-12 text-center">
-          <h2 class="section-title">Selected Education</h2>
-        </div>
+<!-- Title Section -->
+<div class="row">
+  <div class="col-12 text-center">
+    <h2 class="section-title">Selected Education</h2>
+  </div>
+</div>
+
+<!-- Experience Section -->
+<div class="row edu-container">
+  <!-- Experience Card 1 -->
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-light fa-school"></i>
+      <h4 class="experience-title">Unity Junior Programmer</h4>
+      <p class="experience-description">
+        The Unity Junior Programmer Pathway validates skills and competencies to be a proficient junior programmer
+        writing scripts in C# to create interactive experiences with the Unity Editor.
+      </p>
+    </div>
+  </div>
+
+  <!-- Experience Card 2 -->
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-light fa-school"></i>
+      <h4 class="experience-title">Udemy - Build an app with ASPNET Core and Angular from scratch</h4>
+      <p class="experience-description">
+        Complete project based course from start to finish with real world experience using technologies that are
+        currently in demand in the market.
+      </p>
+    </div>
+  </div>
+
+  <!-- Experience Card 3 -->
+  <div class="col-md-4">
+    <div class="experience-card text-center">
+      <i class="fa fa-light fa-school"></i>
+      <h4 class="experience-title"> MA Screenwriting and Producing for Film and TV</h4>
+      <p class="experience-description">
+        University of Westminster, London
+      </p>
+    </div>
+  </div>
+
+
+  <!-- Add more rows as needed -->
+  <div class="row">
+    <div class="col-md-4 mx-auto">
+      <div class="experience-card text-center">
+        <i class="fa fa-light fa-school"></i>
+        <h4 class="experience-title">Scientific High School diploma specializing in Computer Science</h4>
+        <p class="experience-description">
+          Istituto Rosa Bianca, Cavalese, Italy
+        </p>
       </div>
-    
-      <!-- Experience Section -->
-      <div class="row edu-container">
-        <!-- Experience Card 1 -->
-        <div class="col-md-4">
-          <div class="experience-card text-center">
-            <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Unity Junior Programmer</h4>
-            <p class="experience-description">
-              The Unity Junior Programmer Pathway validates skills and competencies to be a proficient junior programmer writing scripts in C# to create interactive experiences with the Unity Editor.
-            </p>
-          </div>
-        </div>
-    
-        <!-- Experience Card 2 -->
-        <div class="col-md-4">
-          <div class="experience-card text-center">
-            <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Udemy - Build an app with ASPNET Core and Angular from scratch</h4>
-            <p class="experience-description">
-              Complete project based course from start to finish with real world experience using technologies that are currently in demand in the market.
-            </p>
-          </div>
-        </div>
-    
-        <!-- Experience Card 3 -->
-        <div class="col-md-4">
-          <div class="experience-card text-center">
-            <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title"> MA Screenwriting and Producing for Film and TV</h4>
-            <p class="experience-description">
-              University of Westminster, London
-            </p>
-          </div>
-        </div>
-      </div>
-    
-      <!-- Add more rows as needed -->
-      <div class="row">
-        <div class="col-md-4 mx-auto">
-          <div class="experience-card text-center">
-            <i class="fa fa-light fa-school"></i>
-            <h4 class="experience-title">Scientific High School diploma specializing in Computer Science</h4>
-            <p class="experience-description">
-              Istituto Rosa Bianca, Cavalese, Italy
-            </p>
-          </div>
-        </div>
-    
-        
-      <br><br><br class="border-line">
+    </div>
+  </div>
+</div>
+<br><br><br class="border-line">
