--- a/client/src/app/experience/experience.component.html
+++ b/client/src/app/experience/experience.component.html
@@ -26,7 +26,7 @@
       <i class="fa fa-briefcase"></i>
       <h4 class="experience-title">Production Linguist - Apple</h4>
       <p class="experience-description">
-        Produced and edited hundreds of scripts and material for AI training.
+        Collaborated on three Apple projects, creating and refining extensive linguistic data for AI training of Siri's Italian-language model.
       </p>
     </div>
   </div>
