--- a/client/src/app/journey/journey.component.html
+++ b/client/src/app/journey/journey.component.html
@@ -1,6 +1,6 @@
 <div class="section">
     <h2>My Journey in C# and Unity</h2>
     <p>My Blog explores my journey in C# programming, game design, mastering coding best practices and random thoughts about coding.</p>
-    <p>This website showcases my progression in C#, .NET, Angular and Unity.</p>
+    <p>This website showcases my progression in C#, .NET, Angular, and Unity, with a front end developed entirely by me using Angular.</p>
   </div>
   
