--- a/client/src/app/expertise/expertise.component.css
+++ b/client/src/app/expertise/expertise.component.css
@@ -1,26 +1,54 @@
-.icon-container {
-    font-size: 80px;
-    
+.left-column{
+  border-top: #232428 solid 2px;
+  border-right: #232428 solid 2px;
+}
+.button{
+  padding-left: 0px;
+  padding-top: 0px;
+  margin-top: 0px;
 }
 .icon-row {
-    display: flex;
-    align-items: center;
-    gap: 20px; /* space between icons */
-    justify-content: center; /* horizontal centering */
-    border-top: 2px solid #232428;
-    padding-top: 20px;
-    padding-bottom: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  border-top: 2px solid #232428;
 
-  }
-  .unity-logo{
-    width: 80px;
+
+  border-right: 2px solid #232428;
+}
+
+.icon-container {
+  font-size: 80px;
+}
+
+.unity-logo, .dotnet-logo {
+  width: 80px;
   height: 80px;
-  object-fit: contain; /* Keeps the aspect ratio */
-  }
-  .dotnet-logo{
-    width: 90px;
-  height: 90px;
 
+}
+.section {
+
+  text-align: left;
+  padding: 15px;
+  text-align: center;
+
+}
+
+.section h2 {
+  font-size: 30px;
+  margin-bottom: 35px;
   
-  }
-  
+}
+
+.section p {
+  padding-bottom: 10px;
+  font-size: 18px;
+  font-weight: 300; /* Matches Bootstrap's .lead */
+}
+.logo {
+  width: 30%; /* Adjust to the percentage you prefer */
+  height: auto; /* Maintain aspect ratio */
+  display: block; /* Ensures the image doesn't have extra space below it */
+  margin: 0 auto; /* Centers the image horizontally */
+}
