--- a/client/src/app/expertise/expertise.component.html
+++ b/client/src/app/expertise/expertise.component.html
@@ -1,4 +1,50 @@
-<div class="icon-row">
+<div class="row">
+
+  <div class="left-column col-md-4">
+    
+    <div class="section">
+      <a href="https://red-rock-0e8252403-preview.westeurope.6.azurestaticapps.net/" target="_blank">
+        <img src="aftermathLogo.png" alt="Aftermath Logo" class="logo" />
+      </a>
+      <h2><a href="https://red-rock-0e8252403-preview.westeurope.6.azurestaticapps.net/" target="_blank">Aftermath -
+          Angular project</a></h2>
+      <p>Web version of a space strategy game inspired by Ogame, built with Angular.
+        I’m handling the frontend for an independent French studio, sending API requests but without backend control.
+        I’ve adapted C# methods like building time calculations into TypeScript to simulate game logic.
+        The project is ongoing and a great opportunity to sharpen my Angular skills.</p>
+    </div>
+
+
+  </div>
+  <div class="left-column icon-row col-md-4">
+    <div class="section">
+      <h2>My early work</h2>
+      <button style="color: inherit; text-decoration: none;" class="button btn btn-link"
+        (click)="openArchiveModal()">Archive</button> <!-- Modal Trigger -->
+    </div>
+  </div>
+
+  <div class="icon-row col-md-4">
+    <img src="dotnet.svg" alt="Unity Logo" class="dotnet-logo" />
+    <img src="c-sharp (1).png" alt="C# Logo" class="unity-logo" />
+    <a href="https://www.credly.com/badges/8a6cc815-d7f6-4977-9496-165ba652ba18/public_url" target="_blank"
+      rel="noopener noreferrer">
+      <div class="icon-container">
+        <i class="fa-brands fa-unity"></i>
+      </div>
+    </a>
+    <div class="icon-container">
+      <i class="fa-brands fa-angular icon"></i>
+    </div>
+  </div>
+
+
+
+
+
+</div>
+
+<!-- <div class="icon-row">
 
     <img src="dotnet.svg" alt="Unity Logo" class="dotnet-logo" />
     <img src="c-sharp (1).png" alt="Unity Logo" class="unity-logo" />
@@ -15,4 +61,4 @@
 
 
 
-</div>
+</div> -->
