--- a/client/src/app/journey/journey.component.css
+++ b/client/src/app/journey/journey.component.css
@@ -1,6 +1,7 @@
 .section {
     padding: 15px 0;
     text-align: left;
+    padding-left: 15px;
   }
   
   .section h2 {
@@ -13,3 +14,4 @@
     font-size: 18px;
     font-weight: 300; /* Matches Bootstrap's .lead */
   }
+  
