--- a/client/src/app/hero/hero.component.html
+++ b/client/src/app/hero/hero.component.html
@@ -15,9 +15,9 @@
 
     <!-- Right Side: Hero Text -->
     <div class="col-md-6">
-      <h1 class="display-4">.NET - Angular | Unity Programmer</h1>
+      <h1 class="display-4">.NET - Angular - React - Unity Programmer</h1>
       <p class="lead">
-        With a solid foundation in C# from my game development experience, I have transitioned to web development, specializing in Angular and the .NET framework. 
+        With a solid foundation in C# from my game development experience, I have transitioned to web development, specializing in React, Angular and the .NET framework. 
         My expertise includes designing scalable class architectures, implementing modern development patterns, 
         and integrating unit testing to ensure high-quality code. I am proficient in TypeScript and JavaScript, 
         and I am currently focused on building the frontend for a resource management game in Angular. 
