--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 
 <app-hero ></app-hero>
 
-
+<app-projects-component></app-projects-component>
 <div class="row" id="projects">
   <div class="col-md-4">
     <app-journey></app-journey>
