--- a/client/src/app/modals/archive-modal/archive-modal.component.html
+++ b/client/src/app/modals/archive-modal/archive-modal.component.html
@@ -10,14 +10,14 @@
     <a href="{{ linkUrl }}" target="_blank" class="btn btn-link">Visit the project</a>
   </div>
 
-  <div class="modal-header">
+ <!--  <div class="modal-header">
     <h4 class="modal-title pull-left">{{title2}}</h4>
   
   </div>
   <div class="modal-body">
     <p>{{message2}}</p>
     <a href="{{ linkUrl2 }}" target="_blank" class="btn btn-link">Visit the project</a>
-  </div>
+  </div> -->
 
 
 <!-- <div class="modal-header">
