--- a/client/src/app/expertise/expertise.component.html
+++ b/client/src/app/expertise/expertise.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 
   <div class="left-column col-md-4">
-    
+
     <div class="section">
       <a href="https://red-rock-0e8252403-preview.westeurope.6.azurestaticapps.net/" target="_blank">
         <img src="aftermathLogo.png" alt="Aftermath Logo" class="logo" />
@@ -16,11 +16,15 @@
 
 
   </div>
-  <div class="left-column icon-row col-md-4">
+  <div class="left-column icon-column col-md-4" style="padding-top: 6vw">
+    <div class="d-flex justify-content-center">
+      <img src="logo-react.svg" alt="Unity Logo" class="dotnet-logo" />
+    </div>
+
     <div class="section">
-      <h2>My early work</h2>
+      <h2>My most recent work in React</h2>
       <button style="color: inherit; text-decoration: none;" class="button btn btn-link"
-        (click)="openArchiveModal()">Archive</button> <!-- Modal Trigger -->
+        (click)="openArchiveModal()">Visit</button> <!-- Modal Trigger -->
     </div>
   </div>
 
@@ -44,21 +48,3 @@
 
 </div>
 
-<!-- <div class="icon-row">
-
-    <img src="dotnet.svg" alt="Unity Logo" class="dotnet-logo" />
-    <img src="c-sharp (1).png" alt="Unity Logo" class="unity-logo" />
-    <a href="https://www.credly.com/badges/8a6cc815-d7f6-4977-9496-165ba652ba18/public_url" target="_blank"
-        rel="noopener noreferrer">
-        <div class="icon-container">
-            <i class="fa-brands fa-unity"></i>
-        </div>
-    </a>
-
-    <div class="icon-container">
-        <i class="fa-brands fa-angular icon"></i>
-    </div>
-
-
-
-</div> -->
