fixed a few things
it looks better now

--- a/client/src/app/hero/hero.component.html
+++ b/client/src/app/hero/hero.component.html
@@ -15,14 +15,9 @@
 
     <!-- Right Side: Hero Text -->
     <div class="col-md-6">
-      <h1 class="display-4">.NET - Angular - React - Unity Programmer</h1>
+      <h1 class="display-4">React | TypeScript | .NET | Angular</h1>
       <p class="lead">
-        With a solid foundation in C# from my game development experience, I have transitioned to web development, specializing in React, Angular and the .NET framework. 
-        My expertise includes designing scalable class architectures, implementing modern development patterns, 
-        and integrating unit testing to ensure high-quality code. I am proficient in TypeScript and JavaScript, 
-        and I am currently focused on building the frontend for a resource management game in Angular. 
-        My background in game development, localization and film production has given me a strong problem-solving mindset. 
-        I am also experienced in collaborative development environments, using version control to contribute effectively to team projects.
+       With a solid foundation in C# from my game development experience, I have transitioned to web development, specializing in <strong>React, Angular, and the .NET framework</strong>. I focus on designing scalable architectures, implementing modern development patterns, and integrating unit testing to ensure high-quality code. I am proficient in TypeScript and JavaScript and work primarily as a freelance web developer, delivering dynamic, maintainable applications. My background in game development, localization, and film production gave me a deep understanding of coding and a strong problem-solving mindset. I am also experienced in collaborative environments, using version control to contribute effectively to team projects.
       </p>
       <a href="mailto:arin.leviti@gmail.com" class="btn btn-primary"
         >Get in Touch</a
