--- a/client/src/app/experience/experience.component.html
+++ b/client/src/app/experience/experience.component.html
@@ -9,16 +9,16 @@
 <div class="row exp-container">
 
   <!-- Experience Card 1 -->
-  <div class="col-md-4">
-    <div class="experience-card text-center">
-      <i class="fa fa-briefcase"></i>
-      <h4 class="experience-title">Front-end developer - Octosharko Games</h4>
-      <p class="experience-description">
-        Creating a responsive frontend with Angular for a resource management game, with efficient player progression,
-        and a smooth user experience.
-      </p>
-    </div>
+<div class="col-md-4">
+  <div class="experience-card text-center">
+    <i class="fa fa-briefcase"></i>
+    <h4 class="experience-title">Front-end Developer - Freelance</h4>
+    <p class="experience-description">
+      Designing and developing the Hero Burger website using React and Next.js, with interactive menus with filters, smooth animations, and seamless state management, 
+      while aligning the site with the client’s brand and visual identity.
+    </p>
   </div>
+</div>
 
   <!-- Experience Card 2 -->
   <div class="col-md-4">
