--- a/client/src/app/projects-component/projects-component.component.html
+++ b/client/src/app/projects-component/projects-component.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid projects-container">
+<div class="d-flex flex-wrap projects-container">
   <div class="row g-0">
     <div class="col-12 col-md-6" *ngFor="let project of projects">
-      <app-project-card [project]="project"></app-project-card>
+      <app-project-card [project]="project" class="flex-fill"></app-project-card>
     </div>
   </div>
 </div>
